# eso-ook

./: CMakeLists.txt  README.md
inc/: dynarr.h  ook.h
src/: main.c  ook.c
